# auto_commit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
docs/design/: architecture.md  datamodel.md  ui.md
src/auto_commit/: config.py  git_agent.py  main.py  watcher.py
tests/: test_config.py  test_e2e.py  test_functional.py  test_git_agent.py  test_integration.py  test_watcher.py
