[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-commit"
version = "0.1.0"
description = "A GUI tool for automated git commits on file changes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6",
    "watchdog",
    "GitPython",
    "python-dateutil"
]

[project.scripts]
auto-commit = "auto_commit.main:main"
