[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-commit"
version = "0.1.0"
description = "A GUI tool for automated git commits on file changes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6",
    "watchdog",
    "GitPython",
    "python-dateutil"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-timeout",
    "pytest-cov",
    "pytest-xdist"
]

[project.scripts]
auto-commit = "auto_commit.main:main"

[tool.pytest.ini_options]
timeout = 300
markers = [
    "slow",
    "integration",
    "e2e",
    "functional"
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --cov=src/auto_commit --cov-report=html --cov-report=term"
